<resources>
    <string name="app_name">画面</string>
    <string name="menu1">現在地</string>
    <string name="menu2">お気に入り</string>
    <string name="menu3">駅から</string>
    <string name="text1">●駅を選択してください</string>
    <string name="PrefName">都道府県</string>
    <string name="LineName">路線</string>
    <string name="StaName">駅名</string>
    <string name="SearchStartButton">検索する</string>
    <string-array name="pref_list">
        <item>選択してください</item>>
        <item>北海道</item>
        <item>青森県</item>
        <item>岩手県</item>
        <item>宮城県</item>
        <item>秋田県</item>
        <item>山形県</item>
        <item>福島県</item>
        <item>茨城県</item>
        <item>栃木県</item>
        <item>群馬県</item>
        <item>埼玉県</item>
        <item>千葉県</item>
        <item>東京都</item>
        <item>神奈川県</item>
        <item>新潟県</item>
        <item>山形県</item>
        <item>石川県</item>
        <item>福井県</item>
        <item>山梨県</item>
        <item>長野県</item>
        <item>岐阜県</item>
        <item>静岡県</item>
        <item>愛知県</item>
        <item>三重県</item>
        <item>滋賀県</item>
        <item>京都府</item>
        <item>大阪府</item>
        <item>兵庫県</item>
        <item>奈良県</item>
        <item>和歌山県</item>
        <item>鳥取県</item>
        <item>島根県</item>
        <item>岡山県</item>
        <item>広島県</item>
        <item>山口県</item>
        <item>徳島県</item>
        <item>香川県</item>
        <item>愛媛県</item>
        <item>高知県</item>
        <item>福岡県</item>
        <item>佐賀県</item>
        <item>長崎県</item>
        <item>熊本県</item>
        <item>大分県</item>
        <item>宮崎県</item>
        <item>鹿児島県</item>
        <item>沖縄県</item>
    </string-array>
    <string-array name="line_list">
        <item>　</item>
    </string-array>
    <string-array name="sta_list">
        <item>　</item>
    </string-array>
    <!--<string-array name="db_list">
        <item>仮</item>
        <item>仮2</item>
    </string-array>-->
    <string name="text2">お気に入りないよ</string>

</resources>
