<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu1"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu2"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu3"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        />
</LinearLayout>