<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/text1"
        android:text="@string/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/PrefName"
        android:text="@string/PrefName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp" />

    <Spinner
        android:id="@+id/PrefSpinner"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:spinnerMode="dialog"
        android:entries="@array/pref_list"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/LineName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"/>

    <Spinner
        android:id="@+id/LineSpinner"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:spinnerMode="dialog"
        android:entries="@array/line_list"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/StaName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"/>

    <Spinner
        android:id="@+id/StaSpinner"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:spinnerMode="dialog"
        android:entries="@array/sta_list"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp" />

    <Button
        android:id="@+id/SearchStartButton"
        android:layout_width="139dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="end"
        android:text="@string/SearchStartButton"/>
</LinearLayout>